# mediator-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  QUICKSTART.md  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html
mediator/: cli.py  commands.py  engine.py  llm.py  mcp_server.py  prompts.py  session.py
mediator/adapters/: __init__.py  slack_app.py  teams_app.py  webhook_app.py
